--- a/cesium/index2.html
+++ b/cesium/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>设置 Cesium 的 Canvas 大小为全屏</title>
+  <title>Cesium </title>
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.107/Build/Cesium/Cesium.js"></script>
   <style>
     /* 设置全屏样式 */
